# numerix

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml  test.yml
numerix/: main.py
numerix/core/: integration.py  interpolation.py  linear_systems.py  nonlinear.py
numerix/ui/: display.py  menu.py  plots.py  prompts.py
numerix/utils/: parser.py  result.py
tests/: test_integration.py  test_interpolation.py  test_linear_systems.py  test_nonlinear.py
